--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -1,6 +1,6 @@
 .banderole
 {
-    height: 150px;
+    height: 242px;
 
     background-image: url("../img/backgrounds/fond_header_bureau.png");
     background-position:  center top;
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     border-bottom: solid white 1.5px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 360px) {
     .banderole
     {
         height: 280px;
@@ -60,7 +60,7 @@ body{
 {
 
     height: 150px;
-
+    margin-top: 50px;
 }
 @media screen and (max-width: 991px)
 {
@@ -137,11 +137,13 @@ body{
 {
     background-color: #B0413E;
     color: whitesmoke;
+    margin-bottom: 0px;
 }
 .flash-success
 {
     background-color: #789339;
     color: whitesmoke;
+    margin-bottom: 0px; /*Override bootstrap*/
 }
 
 .bg-foot
@@ -257,39 +259,30 @@ body{
     padding-top: 15px;
 }
 
-.missionRow
+@media screen and (max-width:360px)
 {
-    margin-bottom: 5%;
-}
-
-td, th /*Tous les tableaux sont formatés ainsi*/
-{
-    border-right: solid black 1px;
-    min-width: 70px;
-    text-align: center;
-    padding-left: 3px;
-    padding-right: 3px;
+    body {
+        background-image: url("../img/backgrounds/fond_accueil_mobile.jpg");
+        background-attachment: fixed;
+    }
+    #logoDuSite
+    {
+        margin-top: 150px;
+    }
 
 
 }
-table {
-    border-collapse: separate;
-    border-spacing: 0px 10px;
-}
 
-td a, th a, td a:hover, th a:hover
+@media screen and (max-width:550px)
 {
-    color:inherit;
-}
-tr td:last-child, tr th:last-child
-{
-    border-right: none;
-}
-table
-{
-    border: hidden;
+    #logoDuSite
+    {
+        width: 100% !important;
+        height: 100%;
+    }
 
 }
+
 
 
 .btn, input[type=text], input[type=password],input[type=email],input[type=search]{
