--- a/web/css/mission.css
+++ b/web/css/mission.css
@@ -2,6 +2,53 @@ body {
     background-image: url(../img/backgrounds/fond_mission_bureau.jpg);
     background-attachment: fixed;
 }
+#placementVid
+{
+    position: absolute;
+    left:0px;
+}
+.videoPlace
+{
+    height: 300px;
+    margin-left: -30px;
+
+    margin-right: 30px;
+}
+
+
+@media screen and (max-width: 1261px)
+{
+    #placementVid
+    {
+        width: 320px;
+        margin-top: 10%;
+    }
+    .videoPlace
+    {
+
+        margin-left: -15px;
+
+        margin-right: 15px;
+    }
+
+}
+
+@media screen and (max-width: 1142px)
+{
+    #placementVid
+    {
+        width: 280px;
+        margin-top: 20%;
+    }
+    .videoPlace
+    {
+
+        margin-left: -30px;
+
+        margin-right: 30px;
+    }
+}
+
 
 
 
@@ -15,27 +62,61 @@ body {
         margin-top: 30px;
 
     }
+    #placementVid
+    {
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 80%;
+        margin-top: 0px;
+    }
+    .videoPlace
+    {
+
+        margin-left: 0%;
+        margin-right: 0%;
+    }
 }
-
-
 
 #videoPop
 {
     background-color: transparent !important;
 }
-.videoPlace
+
+
+
+@media screen and (min-width:880px) and (max-width: 1000px)
 {
-    height: 300px;
+
+
+    .videoPlace
+    {
+        margin-bottom: 150px;
+    }
+
 }
-
-
-@media screen and (min-width:550px) and (max-width: 767px)
+@media screen and (min-width:550px) and (max-width: 880px)
 {
     .videoPlace
-    {margin-bottom: 100px;
+    {
+        margin-bottom: 70px;
     }
+
 }
 
+@media screen and (max-width: 550px)
+{
+    .videoPlace
+    {
+        margin-bottom: 0px;
+        height: 250px;
+    }
+    #videoInPop, #propPopUp
+    {
+        width: 100%;
+    }
+
+
+}
 
 
 #textWrapMobile
@@ -54,3 +135,25 @@ body {
     height: 200px;
     width: 375px;
 }
+
+
+.modal-content, .modal-body
+{
+    background-color: #000000A1;
+    color : white;
+}
+#propPopUp
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+video
+{
+    border: white 0.5px solid;
+}
+.missionRow
+{
+    margin-bottom: 5px;
+}
+
