--- a/web/css/accueil.css
+++ b/web/css/accueil.css
@@ -1,14 +1,14 @@
-body
-{
+body {
     background-image: url("../img/backgrounds/fond_accueil_bureau.jpg");
     background-attachment: fixed;
 }
 
-@media screen and (max-width:360px)
+@media screen and (max-width:300px)
 {
     body {
         background-image: url("../img/backgrounds/fond_accueil_mobile.jpg");
         background-attachment: fixed;
+
     }
 }
 
@@ -22,3 +22,4 @@ body
 {
     margin-bottom: 5%;
 }
+
