--- a/web/css/observation.css
+++ b/web/css/observation.css
@@ -17,18 +17,6 @@ body {
         right: -80% !important;
         top: -43px !important;
     }
-
-    .pictureObs
-    {
-        margin-top: 60px;
-    }
-}
-@media screen and (max-width:980px)
-{
-    .pictureObs
-    {
-        margin-top: 180px;
-    }
 }
 td, th /*Tous les tableaux sont formatés ainsi*/
 {
@@ -66,22 +54,6 @@ table
     position: relative;
     right: 43px;
 }
-.searchElt
-{
-    width: 50%;
-
-}
-#mapSearch
-{
-    max-width: 684px;
-    margin-top: 10px;
-
-}
-.searchElt-little{
-    width: 33%;
-    display: inline;
-
-}
 @media screen and (max-width: 767px) {
     .searchSpecial, .searchSpecial:hover
     {
@@ -91,32 +63,19 @@ table
         right: -90% !important;
         top: -43px !important;
     }
-
-
     .searchElt
     {
-        width: 100%;
+        height: 200px !important;
     }
 }
-.nav-pills
-{
-    font-size: small;
-}
-.panel
-{
-    box-shadow: 0px 0px 2px 1px #5accd1;
-}
 
+.searchElt
+{
+    height: 100px;
+}
 .global-marg-up-xs
 {
     margin-top: 20px;
-}
-.bg-observation-search
-{
-    background-color: #FFFFFF55;
-    margin-bottom: 10px;
-    box-shadow: 0 0 1.5px 1px #313131;
-
 }
 
 .xdsoft_datetimepicker table, .xdsoft_datetimepicker td,.xdsoft_datetimepicker th
@@ -126,16 +85,8 @@ table
     min-width: 0px;
 }
 
-#map, .pictureObs, .pictureObs img{
-
-}
-#map {
-    height: 400px;
-}
-
 @media screen and (max-width:1300px) and (min-width:968px) {
     .map{
         padding-left: 40%;
     }
 }
-
